--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
     "react-images": "^0.5.19",
+    "react-reveal": "^1.2.2",
     "react-scrollspy": "^3.4.0",
     "scrollreveal": "^4.0.5",
     "smoothscroll-polyfill": "^0.4.4"
