--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "email": "anubhav.srivastava00@gmail.com"
   },
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "copy-text-to-clipboard": "^2.1.0",
     "gatsby": "^2.4.3",
     "gatsby-plugin-manifest": "^2.1.1",
@@ -24,6 +25,7 @@
     "react-images": "^0.5.19",
     "react-reveal": "^1.2.2",
     "react-scrollspy": "^3.4.0",
+    "reactstrap": "^8.0.0",
     "scrollreveal": "^4.0.5",
     "smoothscroll-polyfill": "^0.4.4"
   },
