--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-images": "^0.5.19",
     "react-reveal": "^1.2.2",
     "react-scrollspy": "^3.4.0",
+    "react-toastify": "^5.3.1",
     "reactstrap": "^8.0.0",
     "scrollreveal": "^4.0.5",
     "smoothscroll-polyfill": "^0.4.4"
